Added result printing logic
-Source code fully documented up to this point
-Restructured program into multiple source files
-Program now prints the current result in binary, hex, and decimal formats

--- a/AArch32/Linux/Makefile
+++ b/AArch32/Linux/Makefile
@@ -15,7 +15,8 @@
 
 all: acpcalc
 
-Main.o: Main.s
+acpcalc: main.s output.s
+	gcc -g -o $@ $^
 
-acpcalc: Main.o
-	ld -o $@ $^
+clean:
+	rm *.o acpcalc
